2006-11-27  Francisco Javier F. Serrador  <serrador@openshine.com>

	* configure.in, ChangeLog, NEWS, AUTHORS, INSTALL: Added files for
	autotools
	* hermes_hardware.py: Added Gettext stuff
